fixed if enlarged image overflows vertically, top part doesn't get cut off

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ input[type="submit"]:hover {
 #cover img {
   max-width: 70%;
   margin: auto;
+  margin-top: 30px;
   position: absolute;
   top: 0;
   bottom: 0;
